chore(connector): cleanup and rearrange example

--- a/example/project/package.json
+++ b/example/project/package.json
@@ -27,7 +27,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "@nestjs/camunda-external-task-client-js": "file:../../"
+    "nestjs-cambpm": "file:../../"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
