--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nestjs/camunda-external-task-client-js",
+  "name": "nestjs-cambpm",
   "version": "0.0.1",
   "description": "",
   "author": "",
