--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "nestjs-cambpm",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "description": "A NestJS Connector for Camunda BPM Runtime",
+  "author": "Tassilo Weidner",
+  "license": "SEE LICENSE IN LICENSE FILE",
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
