--- a/examples/local-microservice/project/package.json
+++ b/examples/local-microservice/project/package.json
@@ -21,35 +21,35 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/common": "^7.4.2",
+    "@nestjs/core": "^7.4.2",
+    "@nestjs/platform-express": "^7.4.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
+    "rxjs": "^6.6.2",
     "nestjs-cambpm": "file:../../../"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
-    "@types/jest": "25.2.3",
-    "@types/node": "^13.9.1",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "3.0.2",
-    "@typescript-eslint/parser": "3.0.2",
-    "eslint": "7.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "26.0.1",
-    "prettier": "^1.19.1",
+    "@nestjs/cli": "^7.4.1",
+    "@nestjs/schematics": "^7.0.1",
+    "@nestjs/testing": "^7.4.2",
+    "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.9",
+    "@types/node": "^14.0.27",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "jest": "^26.4.0",
+    "prettier": "^2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "26.1.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
+    "ts-jest": "^26.2.0",
+    "ts-loader": "^8.0.2",
+    "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.9.7"
   },
   "jest": {
     "moduleFileExtensions": [
