chore(connector): release version 0.0.3

--- a/examples/local-microservice/project/package.json
+++ b/examples/local-microservice/project/package.json
@@ -1,10 +1,10 @@
 {
   "name": "example-local-microservice",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "Apache License 2.0",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -27,7 +27,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.2",
-    "nestjs-cambpm": "^0.0.1"
+    "nestjs-cambpm": "^0.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.4.1",
